# SuperNOVAS

./: .cproject  CHANGELOG.md  Makefile  README.md  USAGE-C99.md  USAGE-CPP.md
.github/workflows/: dox.yml  indexnow.yml  install.yml  test.yml
doc/: USAGE-C99.md
doc/c99/: Doxyfile  SuperNOVAS_vs_astropy.md
doc/cpp/: Doxyfile  SuperNOVAS++_vs_C99.md  SuperNOVAS++_vs_astropy.md
doc/src/: docedit.c
examples/c99/: example-calceph.c
examples/cpp/: CMakeLists.txt  Makefile  example-calceph.cpp  example-cspice.cpp  example-high-z.cpp  example-moon.cpp  example-orbital.cpp  example-rise-set.cpp  example-star.cpp  example-time.cpp
include/: supernovas.h
resources/: doxygen_extra.css
src/c99/: solsys-cspice.c  target.c  util.c
src/cpp/: Angle.cpp  Apparent.cpp  AstrometricPosition.cpp  CMakeLists.txt  Calendar.cpp  Coordinate.cpp  Ecliptic.cpp  Equinox.cpp  Frame.cpp  Galactic.cpp  Geometric.cpp  Horizontal.cpp  Makefile  Observer.cpp  Position.cpp  ScalarVelocity.cpp  Site.cpp  Source.cpp  Track.cpp
test/: Makefile
test/c99/: Makefile
test/cpp/: ApparentTest.cpp  CMakeLists.txt  CalendarTest.cpp  EquinoxTest.cpp  FrameTest.cpp  GeometricTest.cpp  HorizontalTest.cpp  Makefile  ObserverTest.cpp  PlanetTest.cpp  SourceTest.cpp  TimeTest.cpp  TrackTest.cpp
test/src/: test-super.c
